--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -2,7 +2,7 @@
 baseurl = "https://minnyres.github.io"
 languageCode = "zh-cn"
 paginate = 5
-title = "Hugo Theme Stack Starter"
+title = "Free Hamster"
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, zh-tw, es, de, nl, it, th, el, uk, ar
